--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -102,3 +102,17 @@ button.is-style-outline {
     border-radius: 0px;
     line-height: 0px;
 }
+
+.entry-content > * {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.alignwide {
+    max-width: 1200px;
+}
+
+.alignfull {
+    width: 100%;
+}
