--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -103,16 +103,18 @@ button.is-style-outline {
     line-height: 0px;
 }
 
-.entry-content > * {
+.entry-content > *:not(.woocommerce) {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
 }
 
+.entry-content > *.alignwide, 
 .alignwide {
     max-width: 1200px;
 }
 
+.entry-content > *.alignfull, 
 .alignfull {
     width: 100%;
 }
@@ -122,4 +124,60 @@ h1 {
     font-size: 25px;
     letter-spacing: 5px;
     margin: 5px;
+}
+
+.wp-block-post-title {
+    font-family: 'Lato', sans-serif;
+    font-size: 45px;
+    letter-spacing: 5px;
+    margin: 5px;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-right: auto;
+    font-weight: 300;
+}
+
+.single-product, .onsale {
+    background-attachment: #3fa9fa;
+    color: black;
+    font-size: 20px;
+}
+
+.woocommerce-Price-amount, .amount {
+    color: #3fa9fa;
+    text-decoration: none;
+    font-size: 40px;
+    font-family: Arial-black;
+    text-decoration-color: white ;
+
+}
+
+.single-product .single_add_to_cart_button {
+    background-color: #3fa9fa;
+}
+
+.woocommerce-product-gallery__image {
+    padding: 20px;
+}
+
+.wp-block-post-title .single-product {
+    opacity: 0;
+}
+
+.single-product bdi {
+    text-decoration: none;
+}
+
+.single-product, .sku, .sku_wrapper {
+    break-after:always ;
+    width: 100%;
+    float: none;
+}
+ .single_add_to_cart_button, .button, .alt {
+    background-color: #3fa9fa;
+    height: 30px;
+    width: 90px;
+    color: aliceblue;
+    border: 10px black solid;
+    fill: #3fa9fa;
 }
