Installed Ninja Forms

--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -13,7 +13,7 @@
     font-family: Arial-black;
 
 }
-
+/* ninjaForm */
 .wp-block-quote.is-style-default p  {
     color: white;
     font-size: 40px;
