--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -102,7 +102,7 @@ button.is-style-outline {
 }
 
 .alignwide {
-    max-width: 1200px;
+    max-width: 1600px;
 }
 
 .alignfull {
@@ -169,7 +169,7 @@ h1 {
 }
 
 button.single_add_to_cart_button .button .alt {
-    background-color: #3fa9fa;
+    background-color: #3fa9fa !important;
 }
 
 .qty {
@@ -253,30 +253,13 @@ button.single_add_to_cart_button .button .alt {
     float: left;
     list-style: none;
     width: 100%;
-    height: 90px;
+    height: 60px;
     margin-top: -10px;
     background-color: #d0d1d1;
+    border-bottom: solid 2px black;
 }
 
-.menu-item {
-    list-style: none;
-    width: 100px;
-    height: 50px;
-    line-height: 40px;
-    padding: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
-    color: black;
-    background-color: azure;
-    float: left;
-    text-decoration: none;
-    cursor: pointer;
-    text-align: center;
-    font-size: 25px;
-    font-family: 'Staatliches', italic-light;
-    border: solid 1px black;
 
-}
 
 .posted_in {
     width: 100%;
@@ -290,9 +273,29 @@ button.single_add_to_cart_button .button .alt {
 }
 
 a { 
-    color: #3fa9fa;
     text-decoration: none;
+    color: black;
 }
+
+.menu-item {
+    list-style: none;
+    width: 100px;
+    height: 30px;
+    line-height: 20px;
+    padding: 5px;
+    margin-left: 0px;
+    margin-right: 10px;
+    color: black;
+    float: left;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    font-size: 15px;
+    font-family: Arial-black;
+    font-style: italic;
+
+}
+
 
 .menu-item:hover {
     opacity: 0.8;
@@ -301,4 +304,8 @@ a {
 
 .space-around-icons-contact {
     margin: 5px;
+}
+
+.type-product  {
+    border: solid 2px black ;
 }
