--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -161,13 +161,13 @@ bdi {
     margin-bottom: 10px !important;
 }
  .single_add_to_cart_button, .alt, .button{
-    width: 88%;
     text-align: center;
     font-size: 20px;
     align-self: center;
     border: solid #3fa9fa 1px !important;
     background-color: #dcdcdc !important;
     color: black !important;
+    margin: auto !important;
  
 
 }
@@ -371,3 +371,14 @@ a {
 }
 
 /* Footer Stylized */
+
+#coupon_code {
+    width: 500px !important;
+    height: 40px;
+
+}
+
+.woocommerce-cart-form__cart-item .cart_item {
+    width: 200px !important;
+    height: 200px !important;
+}
