--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -378,10 +378,36 @@ a {
 
 }
 
-.woocommerce-cart-form__cart-item .cart_item {
-    width: 200px !important;
-    height: 200px !important;
+.woocommerce-cart-form__cart-item  {
+    height: 10px !important;
 }
+
+.woocommerce-cart-form__cart-item img  {
+    height: 200%;
+    width: 200%;
+    margin: 5px;
+} 
+
+.product-remove {
+    width: 30px;
+}
+
+.woocommerce-cart-form__cart-item .product-thumbnail {
+    height: 120px !important;
+    width: 100px;
+    margin: 5px;
+    padding: 2px;
+}
+
+
+td {
+    border-left:#9a9c9c;
+    border-right: #9a9c9c;
+    text-align: left !important;
+}
+
+
+
 
 .wp-post-image {
     width: 60% !important;
