--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -419,10 +419,53 @@ td {
 }
 
 /* Holding content to size */
+.footerBlog {
+    display: flex;
+    flex-wrap: wrap ;
+    justify-content: center;
+    grid-template-columns: auto;
+    width: 100%;
+}
 
-.blogCardTitle {
+
+.blogPostTitle {
     width: 100%;
     text-align: center;
     font-size: 40px;
     margin: 15px;
+    color: #dcdcdc;
 }
+.cardTextSection p {
+    font-size: 25px;
+    margin: 10px;
+    background-color: #9a9c9c44;
+    padding: 5px;
+    text-align: center;
+    color: #dcdcdc;
+}
+
+.size-post-thumbnail {
+    width: 100%;
+    height: 750px;
+}
+.blogCardTitle {
+    margin: 30px;
+    width: 100%;
+    font-size: 40px;
+    text-align: center;
+    color: black
+}
+
+.contentBlogFooterHolder {
+    width: 100%;
+    float: left;
+}
+.card {
+    width: 31.5%;
+    padding: 5px;
+    background-color: #9a9c9c;
+    margin: 10px;
+    float: left;
+    
+}
+
