--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -428,32 +428,22 @@ td {
 }
 
 
-.blogPostTitle {
-    width: 100%;
-    text-align: center;
-    font-size: 40px;
-    margin: 15px;
-    color: #dcdcdc;
-}
+
 .cardTextSection p {
     font-size: 25px;
     margin: 10px;
     background-color: #9a9c9c44;
     padding: 5px;
     text-align: center;
-    color: #dcdcdc;
+    color: black
 }
 
-.size-post-thumbnail {
-    width: 100%;
-    height: 750px;
-}
 .blogCardTitle {
     margin: 30px;
     width: 100%;
     font-size: 40px;
     text-align: center;
-    color: black
+    color: black;
 }
 
 .contentBlogFooterHolder {
@@ -463,9 +453,20 @@ td {
 .card {
     width: 31.5%;
     padding: 5px;
-    background-color: #9a9c9c;
+    background-color: #d5d6d6;
     margin: 10px;
     float: left;
     
 }
+.card img {
+    width: 100%;
+    height: 750px;
+}
 
+.blogPostTitle {
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    margin: 15px;
+    color: #ffffff;
+}
