--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -382,12 +382,14 @@ td {
 }
 
 .cardTextSection p {
-    font-size: 25px;
+    font-size: 15px;
     margin: 10px;
     background-color: #9a9c9c44;
     padding: 5px;
     text-align: center;
-    color: black
+    color: black;
+    max-height: 120px;
+    min-height: 120px;
 }
 
 .blogCardTitle {
@@ -416,11 +418,14 @@ td {
 }
 
 .blogPostTitle {
-    width: 100%;
+    width: 90%;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     margin: 15px;
+    padding:5px;
     color: #ffffff;
+    min-height: 75px;
+    max-height: 75px;
 }
 
 /* footerSectionStylization */
