CSS Section for Ninja Forms Created

--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -428,6 +428,11 @@ td {
     max-height: 75px;
 }
 
+/* Ninja Forms Editing */
+
+
+
+
 /* footerSectionStylization */
 .footerSect {
     float: left;
