Ninja forms style and accessibility change
Colour and cursor view change to make form more appealing and user accessible

--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -428,8 +428,11 @@ td {
     max-height: 75px;
 }
 
-/* Ninja Forms Editing */
-
+/** Ninja Forms Editing */
+.nf-element {
+    cursor: pointer;
+}
+/* End of Ninja forms editing */
 
 
 
