Adjusting product column size to fit mobile
Targeted and changed tho mobile view of the product layout on the homepage - fits accordingly

--- a/themes/tbtcan/assests/css/block-editor.css
+++ b/themes/tbtcan/assests/css/block-editor.css
@@ -505,3 +505,9 @@ td {
 
 /* ! Mobile Size Woocommerce Css */
 /* Product layout editing */
+@media(max-width: 614px) {
+    .product, .columns-3 li {
+        width: 45% !important; 
+        margin: 5px !important;
+    }
+}
